--- a/Stock-Monitor/app/src/main/res/values/strings.xml
+++ b/Stock-Monitor/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="price_lbl">0.0</string>
     <string name="percentageChange">0.0</string>
     <string name="companyName_lbl">Company Name</string>
+    <string name="imageDescriptor">stock value change direction</string>
+    <string name="downSolidArrow">▼</string>
+    <string name="upSolidArrow">&#x25b2;</string>
 </resources>
